--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^2.0.0"
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
