--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "js-yaml": "^3.14.0"
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
